--- a/pages/science.html
+++ b/pages/science.html
@@ -57,42 +57,42 @@
 
                <div class="science-layout">
                     <section class="science-topic">
-                         <h2 class="science-list"><a href="../learning/signaling.html">Cell Signaling</a></h2>
+                         <h2  class="science-list"><a href="../learning/signaling.html">Cell Signaling</a></h2>
                          <ul>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#growth">Growth Receptors</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#overview">Growth Pathways Overview</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#ras">RAS Pathway</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#mtor">mTOR Pathway</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#cycle">Cell Cycle</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#repair">DNA Repair</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#wnt">Wnt Signaling</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#tcell">T Cell Receptor</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#bcell">B Cell Receptor</a>
                               </li>
-                              <li>
+                              <li class="science-topics">
                                    <a href="../learning/signaling.html#tlr">TLR Signaling</a>
                               </li>
                          </ul>
                     </section>
                     <section class="science-topic">
-                         <h2 class="science-list">Genetics</h2>
+                         <h2 class="science-list"><a href="../learning/genetics.html">Genetics</a></h2>
                          <ul>
                               <li>DNA Structure</li>
                               <li>DNA Packaging</li>
