--- a/learning/genetics.html
+++ b/learning/genetics.html
@@ -61,7 +61,9 @@
                
                <section>
                     <ul>
-                         <li>DNA Structure</li>
+                         <li class="science-topics">
+                              <a href="#structure">DNA Structure</a>
+                         </li>
                          <li>DNA Packaging</li>
                          <li>Chromosomes</li>
                          <li>DNA Synthesis</li>
@@ -80,6 +82,84 @@
                          <li>Sequencing SMRT Technology</li>
                          <li>Sequencing Nanopore Technology</li>
                     </ul>
+               </section>
+
+               <section>
+                    <h2 class="science-headers" id="structure">DNA Structure</h2>
+                    <p>
+                         Both DNA and RNA are made up of the basic components called nucleotides. Each nucleotide is made up of 
+                         3 smaller parts. There is the nucleic acid often called the base, the ribose sugar and then the 
+                         phosphate group. 
+                    </p>
+                    <p>
+                         The first part is the base which is made up of the 5 basic nucleic acids with Adenine, 
+                         Guanine, Cytosine, Thymine and Uracil. There are a few attributes of nucleic acids for us to cover. The 
+                         first thing about the 5 nucleic acids is they are made of Nitrogenous bases. All other structures we see 
+                         in biology are made from carbon structures. The nucleic acids are made up of nitrogen. That makes them 
+                         unique from other chemical structures. The next thing you will notice is some of these has 2 rings and
+                         the others have a single ring structure. The Adenine and Guanine have 2 rings and we call these the 
+                         Purines. The Cytosine, Thymine and Uracil all have a single ring. We call them the Pyrimidines.  There are
+                         a total of 5 nucleic acids but only 4 get used in DNA and 4 get used in RNA. The Adenine, Guanine and 
+                         Cytosine are used in both DNA and RNA. The major difference is that Thymine is used and DNA and Uracil 
+                         replaces it in the RNA. If you look at the Thymine vs Uracil, they are actually very similar structures. 
+                         The Thymine has an extra Methane group. This is the main difference between Thymine in DNA and Uracil in 
+                         RNA.
+                    </p>
+                    <p>
+                         One major difference I want to point out will be important later when we talk about base editing. 
+                         Base Editing uses and enzyme called a Deaminase. This enzyme plucks off the Amino group of a nucleic 
+                         acid. And amino group is an NH grouping. The Adenine only differs from Guanine by a lone NH2 group 
+                         (amino group) at the top. If you pluck that off with a deaminase, you can facilitate the transition 
+                         to a Guanine. The same applies to the Cytosine amino group that can be removed to transition to a Thymine. 
+                         This is a concept I wanted to touch on in the structure section as we cover Base Editing later.
+                    </p>
+                    <p>
+                         The next part of the Nucleotide will be the Ribose sugar. The ribose sugar comes with 5 carbons in its 
+                         structure. The carbon actually look like a Big Dipper formation. Its held into a pentagon shape my a 
+                         lone oxygen at the top center. When dealing with a carbon structure like ribose, we number the carbons 
+                         using the Prime designation which is represented with an '. So the 1 prime carbon (1') is the first 
+                         carbon on the far right that the nucleic acid binds to. The 2' carbon is where we determine Ribose from 
+                         Deoxyribose. The ribose has the hydroxyl (OH) group which makes it ribose. When the OH group is replaced
+                         with just a hydrogen, that is the Deoxyribose. The Deoxyribose is used in DNA as that OH group would interfere 
+                         with the bonding of the base pairs in DNA. The last part of the Nucleotide is the Phosphate group.
+                    </p>
+                    <p>
+                         The phosphate group is actually a charged molecule that wants to bind to  another molecule 
+                         because it carries a negative charge. The phosphate group binds to the 5' carbon. This leaves 
+                         only the 3' and 2' carbons not used. Then it bonds again to the 3' carbon of the pervious nucleotide. 
+                         This creates a linker of phophates from the 5' of one base to the 3' of the next base.
+                    </p>
+                    <p>
+                         This basic formation is the basic repetitive group of DNA or RNA. The phosphate group binds to the 5' 
+                         carbon of the ribose sugar then it will bind again to the 3' carbon of the previous nucleotide in the 
+                         DNA structure. This binding of the phosphate group from the 5' carbon of one nucleotide to the 3' carbon 
+                         of the previous nucleotide strings the nucleotide together into a long strand of DNA. This is how we number
+                         the DNA as it is read from 5' to 3' along that strand of DNA.
+                    </p>
+                    <p>
+                         We know that DNA is made up of 2 strands. The first strand will run 5' to 3' while the other 
+                         strand will run from 3' to 5' creating an exact opposite copy of the first strand. We call this 
+                         antiparallel. This brings us to the concept of base paring of the nucleic acids in the double stranded 
+                         DNA structure. This is called the Chargaff's rule. He measured the amounts of each nucleic acid used in 
+                         the DNA and found that the amount of Adenine was always equal to the Thymine. While the amount of Guanine
+                         was always equal to the amount of Thymine. This led to the conclusion that Adenine based paired with 
+                         Thymine and Guanine base paired with Cytosine. One purine with one pyrimidine.
+                    </p>
+                    <p>
+                         The Adenine base pairs with Thymine using 2 hydrogen bonds while the Guanine base pairs with the Thymine 
+                         using 3 hydrogen bonds. This hydrogen bonding establishes a weak bond that can be opened when enzymes want 
+                         to copy or replicate the DNA. The base pairing of the DNA with one strand running in one direction and the 
+                         other strand running in the opposite direction gives us the double helix structure of the DNA. This is the 
+                         double stranded DNA structure we associate with Human DNA.
+                    </p>
+                    <p>
+                         The nucleic acids face the inside of the structure as they are electrostatically 
+                         charged and bind to each other. The phosphates are on the outside and make up the 
+                         phosphate backbone of the DNA double helix. This is because the phosphate will protect the DNA from the 
+                         watery environment around it. When it comes to RNA, its structure is single stranded so it tends to fold 
+                         up and base pair with matching nucleic acids forming Stem and Loop formations.
+                    </p>
+                    <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                </main>
