--- a/pages/science.html
+++ b/pages/science.html
@@ -94,7 +94,9 @@
                     <section class="science-topic">
                          <h2 class="science-list"><a href="../learning/genetics.html">Genetics</a></h2>
                          <ul>
-                              <li>DNA Structure</li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#structure">DNA Structure</a>
+                              </li>
                               <li>DNA Packaging</li>
                               <li>Chromosomes</li>
                               <li>DNA Synthesis</li>
