--- a/pages/science.html
+++ b/pages/science.html
@@ -97,11 +97,21 @@
                               <li class="science-topics">
                                    <a href="../learning/genetics.html#structure">DNA Structure</a>
                               </li>
-                              <li>DNA Packaging</li>
-                              <li>Chromosomes</li>
-                              <li>DNA Synthesis</li>
-                              <li>Transcription</li>
-                              <li>Translation</li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#package">DNA Packaging</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#chromosomes">Chromosomes</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#synthesis">DNA Synthesis</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#transcription">Transcription</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#translation">Translation</a>
+                              </li>
                               <li>Protein Folding</li>
                               <li>Mitosis</li>
                               <li>Epigenetics</li>
