--- a/pages/science.html
+++ b/pages/science.html
@@ -112,18 +112,42 @@
                               <li class="science-topics">
                                    <a href="../learning/genetics.html#translation">Translation</a>
                               </li>
-                              <li>Protein Folding</li>
-                              <li>Mitosis</li>
-                              <li>Epigenetics</li>
-                              <li>Transmission Genetics</li>
-                              <li>Heredity</li>
-                              <li>Inheritance</li>
-                              <li>Gene Linkage</li>
-                              <li>Pedigree</li>
-                              <li>Meiosis</li>
-                              <li>Antisense</li>
-                              <li>Sequencing SMRT Technology</li>
-                              <li>Sequencing Nanopore Technology</li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#folding">Protein Folding</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#mitosis">Mitosis</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#epigenetics">Epigenetics</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#transmission">Transmission Genetics</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#heredity">Heredity</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#inheritance">Inheritance</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#gene">Gene Linkage</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#pedigree">Pedigree</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#meiosis">Meiosis</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#antisense">Antisense</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#smrt">Sequencing SMRT Technology</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/genetics.html#nanopore">Sequencing Nanopore Technology</a>
+                              </li>
                          </ul>
                     </section>
                     <section class="science-topic">
