Started CRISPR Page

--- a/pages/science.html
+++ b/pages/science.html
@@ -142,19 +142,41 @@
                          </ul>
                     </section>
                     <section class="science-topic">
-                         <h2 class="science-list">CRISPR</h2>
+                         <h2 class="science-list"><a href="../learning/crispr.html">CRISPR</a></h2>
                          <ul>
-                              <li>Intro to CRISPR</li>
-                              <li>Types of CRISPR</li>
-                              <li>CAS9</li>
-                              <li>CAS12</li>
-                              <li>MAD7</li>
-                              <li>CASX</li>
-                              <li>CAS13</li>
-                              <li>CAS14 and Phi</li>
-                              <li>Base Editing</li>
-                              <li>Prime Editing</li>
-                              <li>PASTE Editing</li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#intro">Intro to CRISPR</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#types">Types of CRISPR</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#cas9">CAS9</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#cas12">CAS12</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#mad7">MAD7</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#casx">CASX</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#cas13">CAS13</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#mini">CAS14 and Phi</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#base">Base Editing</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#prime">Prime Editing</a>
+                              </li>
+                              <li class="science-topics">
+                                   <a href="../learning/crispr.html#paste">PASTE Editing</a>
+                              </li>
                          </ul>
                     </section>
                     <section class="science-topic">
