Started Filling in Immunology

--- a/pages/mirati.html
+++ b/pages/mirati.html
@@ -80,7 +80,7 @@
                          </p>
                          <p class="profiles">
                               MRTX1133 G12D<progress class="progress-bar" value="10" max="100"></progress>
-                              IND Enabling Studies
+                              IND approved waiting Phase 1 Start
                          </p>
                          <p class="profiles">
                               Sitravatinib TAM<progress class="progress-bar" value="60" max="100"></progress>
