--- a/learning/tcells.html
+++ b/learning/tcells.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
      <head>
-          <title>Human Leukocyte Antigens</title>
+          <title>T cells</title>
 
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +55,7 @@
 
           <main>
 
-               <h1 class="science-headers">Human Leukocyte Antigens</h1>
+               <h1 class="science-headers">T Cells</h1>
 
                <div class="science-container">
           
